--- a/index.html
+++ b/index.html
@@ -5,21 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profit Tracker</title>
   <link rel="manifest" href="manifest.json">
-  <style>
-    body, html { margin:0; padding:0; height:100%; }
-    iframe { border:none; width:100%; height:100vh; }
-  </style>
+  <script>
+    window.location.href = "https://script.google.com/macros/s/AKfycby2OX0xbPi-e-3Xm4ez5FhSNC-9g3L_KnAnX3pQfbedcbwi_ao--JHEdImRRptMlH6v/exec";
+  </script>
 </head>
 <body>
-  <!-- Ganti URL WebApp lo di bawah -->
-  <iframe src="https://script.google.com/macros/s/AKfycby2OX0xbPi-e-3Xm4ez5FhSNC-9g3L_KnAnX3pQfbedcbwi_ao--JHEdImRRptMlH6v/exec"></iframe>
-
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('Service Worker Registered'));
-    }
-  </script>
+  <p>Loading WebApp...</p>
 </body>
 </html>
-
