--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Profit Tracker</title>
   <link rel="manifest" href="manifest.json">
   <script>
+    // Redirect ke WebApp Google
     window.location.href = "https://script.google.com/macros/s/AKfycby2OX0xbPi-e-3Xm4ez5FhSNC-9g3L_KnAnX3pQfbedcbwi_ao--JHEdImRRptMlH6v/exec";
   </script>
 </head>
