--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ button { padding:1rem 2rem; font-size:1.2rem; cursor:pointer; }
 <body>
 <h1>Profit Tracker</h1>
 <p>Install app ini dan buka WebApp lo</p>
+  <p>Loading WebApp…</p>
 <button onclick="window.location.href='https://script.google.com/macros/s/AKfycby2OX0xbPi-e-3Xm4ez5FhSNC-9g3L_KnAnX3pQfbedcbwi_ao--JHEdImRRptMlH6v/exec'">Buka WebApp</button>
 </body>
 </html>
