--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Profit Tracker</title>
+<title>Profit Ayam Potong</title>
 <link rel="manifest" href="manifest.json">
 <script>
 if ('serviceWorker' in navigator) {
@@ -19,7 +19,6 @@ button { padding:1rem 2rem; font-size:1.2rem; cursor:pointer; }
 <body>
 <h1>Profit Tracker</h1>
 <p>Install app ini dan buka WebApp lo</p>
-  <p>Loading WebApp…</p>
 <button onclick="window.location.href='https://script.google.com/macros/s/AKfycby2OX0xbPi-e-3Xm4ez5FhSNC-9g3L_KnAnX3pQfbedcbwi_ao--JHEdImRRptMlH6v/exec'">Buka WebApp</button>
 </body>
 </html>
